--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -3,40 +3,22 @@ events {
 }
 
 http {
-    upstream supacart_api {
-        server supacart-gym-api:5000;   # Live API container
+    upstream auth {
+        server auth:5003;   # Auth service
+    }
+
+    upstream user {
+        server user:5001;   # User service
     }
 
     server {
         listen 80;
-        server_name supagymbackend.duckdns.org;
+        server_name megaecommerce.ddns.net;
+        #server_name localhost;
 
-        # Let's Encrypt verification
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        # Redirect HTTP to HTTPS
-        location / {
-            return 301 https://$host$request_uri;
-        }
-    }
-
-    server {
-        listen 443 ssl;
-        server_name supagymbackend.duckdns.org;
-
-        # SSL certificates
-        ssl_certificate /etc/letsencrypt/live/supagymbackend.duckdns.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/supagymbackend.duckdns.org/privkey.pem;
-
-        # SSL settings
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
-
-        location / {
-            proxy_pass http://supacart_api;
+        # Auth API
+        location /auth/ {
+            proxy_pass http://auth/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -45,6 +27,24 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
+        }
+
+        # User API
+        location /user/ {
+            proxy_pass http://user/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Optional: catch-all for other paths
+        location / {
+            return 404;
         }
     }
 }
