--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,12 +54,12 @@ services:
       # - ./certbot/www:/var/www/certbot
     networks:
       - app-network
-  # certbot:
-  #   image: certbot/certbot
-  #   volumes:
-  #     - ./certbot/conf:/etc/letsencrypt
-  #     - ./certbot/www:/var/www/certbot
-  #   command: certonly --webroot -w /var/www/certbot --email oakarkyaw@gmail.com -d supagymbackend.duckdns.org --agree-tos --no-eff-email
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    command: certonly --webroot -w /var/www/certbot --email oakarkyaw@gmail.com -d megaecommerce.ddns.net --agree-tos --no-eff-email
 
 networks:
   app-network:
