--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -13,37 +13,11 @@ http {
 
     server {
         listen 80;
-        server_name megaecommerce.ddns.net;
-
-        # Let's Encrypt verification
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        # Redirect HTTP to HTTPS
-        location / {
-            return 301 https://$host$request_uri;
-        }
-    }
-
-    server {
-        listen 443 ssl;
-        server_name megaecommerce.ddns.net;
-
-        # SSL certificates
-        ssl_certificate /etc/letsencrypt/live/megaecommerce.ddns.net/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/megaecommerce.ddns.net/privkey.pem;
-
-        # SSL settings
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
+        server_name ecommerce-backend.ddns.net;
+        #server_name localhost;
 
         # Auth API
-        location /api/auth/ {
-            if (-f /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem) {
-                return 301 https://$host$request_uri;
-            }
+        location /auth/ {
             proxy_pass http://auth/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -56,10 +30,7 @@ http {
         }
 
         # User API
-        location /api/v1/users/ {
-            if (-f /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem) {
-                return 301 https://$host$request_uri;
-            }
+        location /user/ {
             proxy_pass http://user/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -71,11 +42,8 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Optional: catch-all for other APIs
+        # Optional: catch-all for other paths
         location / {
-            if (-f /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem) {
-                return 301 https://$host$request_uri;
-            }
             return 404;
         }
     }
