--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,18 +47,18 @@ services:
     depends_on:
       - auth
       - user
-    restart: always
+    # restart: always
     volumes:
       - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
     networks:
       - app-network
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
+  # certbot:
+  #   image: certbot/certbot
+  #   volumes:
+  #     - ./certbot/conf:/etc/letsencrypt
+  #     - ./certbot/www:/var/www/certbot
     #command: certonly --webroot -w /var/www/certbot --email oakarkyaw@gmail.com -d megaecommerce.ddns.net --agree-tos --no-eff-email
 
 networks:
