feat(auth): add ssl implementation

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -135,6 +135,8 @@ jobs:
 
             # echo "✅ Temp containers healthy. Switching live..."
 
+            docker compose build --no-cache
+            
             # docker compose down
             docker compose up -d
 
