--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -13,11 +13,37 @@ http {
 
     server {
         listen 80;
+        server_name megaecommerce.ddns.net;
+
+        # Let's Encrypt verification
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        # Redirect HTTP to HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
         server_name ecommerce-backend.ddns.net;
-        #server_name localhost;
+
+        # SSL certificates
+        ssl_certificate /etc/letsencrypt/live/ecommerce-backend.ddns.net/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/ecommerce-backend.ddns.net/privkey.pem;
+
+        # SSL settings
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
 
         # Auth API
-        location /auth/ {
+        location /api/v1/auth/ {
+            if (-f /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem) {
+                return 301 https://$host$request_uri;
+            }
             proxy_pass http://auth/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -30,7 +56,10 @@ http {
         }
 
         # User API
-        location /user/ {
+        location /api/v1/users/ {
+            if (-f /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem) {
+                return 301 https://$host$request_uri;
+            }
             proxy_pass http://user/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -42,9 +71,13 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Optional: catch-all for other paths
+        # Optional: catch-all for other APIs
         location / {
-            return 404;
+            if (-f /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem) {
+                return 301 https://$host$request_uri;
+            }
+            add_header Content-Type application/json;
+            return 200 '{"message": "welcome to ecommerce backend"}';;
         }
     }
 }
