--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -76,7 +76,7 @@ jobs:
             cd "$APP_DIR"
 
             echo "🔹 Pull latest code from repository..."
-            git pull https://${{ secrets.GITHUB_TOKEN }}@github.com/Oakar-Kyaw/ecommerce-backend.git master
+            git pull https://${{ secrets.TOKEN }}@github.com/Oakar-Kyaw/ecommerce-backend.git master
 
             export DOCKER_USER=${{ secrets.DOCKER_USERNAME }}
             export TAG=${{ github.sha }}
