--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -13,7 +13,7 @@ http {
 
     server {
         listen 80;
-        server_name megaecommerce.ddns.net;
+        server_name ecommerce-backend.ddns.net;
 
         # Let's Encrypt verification
         location /.well-known/acme-challenge/ {
@@ -41,9 +41,6 @@ http {
 
         # Auth API
         location /api/v1/auth/ {
-            if (-f /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem) {
-                return 301 https://$host$request_uri;
-            }
             proxy_pass http://auth/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -57,9 +54,6 @@ http {
 
         # User API
         location /api/v1/users/ {
-            if (-f /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem) {
-                return 301 https://$host$request_uri;
-            }
             proxy_pass http://user/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -71,11 +65,8 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Optional: catch-all for other APIs
+        # Welcome message for root
         location / {
-            if (-f /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem) {
-                return 301 https://$host$request_uri;
-            }
             add_header Content-Type application/json;
             return 200 '{"message": "welcome to ecommerce backend"}';
         }
