--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "concurrently \"node dist/apps/ecommerce-backend/main\" \"node dist/apps/auth/main\" \"node dist/apps/user/main\"",
     "start:all": "concurrently \"nest start ecommerce-backend --watch\" \"nest start auth --watch\" \"nest start user --watch\"",
+    "prisma:noti": "prisma generate --schema=./apps/notification/prisma/schema.prisma",
+    "prisma:user": "prisma generate --schema=./apps/user/schema/prisma/schema.prisma",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,6 +23,7 @@
     "test:e2e": "jest --config ./apps/ecommerce-backend/test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -33,6 +36,8 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "firebase-admin": "^13.5.0",
+    "nodemailer": "^7.0.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
