--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ version: '3.8'
 
 services:
   auth:
+    build:
+      context: 
+      dockerfile: Dockerfile
     image: ${DOCKER_USER}/auth:${TAG:-latest}
     #image: auth
     env_file:
@@ -44,12 +47,12 @@ services:
       - ./certbot/www:/var/www/certbot
     networks:
       - app-network
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    command: certonly --webroot -w /var/www/certbot --email oakarkyaw@gmail.com -d ecommerce-backend.ddns.net --agree-tos --no-eff-email
+  # certbot:
+  #   image: certbot/certbot
+  #   volumes:
+  #     - ./certbot/conf:/etc/letsencrypt
+  #     - ./certbot/www:/var/www/certbot
+  #   command: certonly --webroot -w /var/www/certbot --email oakarkyaw@gmail.com -d ecommerce-backend.ddns.net --agree-tos --no-eff-email
 
 networks:
   app-network:
