--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "concurrently \"node dist/apps/ecommerce-backend/main\" \"node dist/apps/auth/main\" \"node dist/apps/user/main\"",
     "start:all": "concurrently \"nest start ecommerce-backend --watch\" \"nest start auth --watch\" \"nest start user --watch\"",
+    "start:auth": "prisma generate --schema=./apps/auth/prisma/.prisma",
     "prisma:noti": "prisma generate --schema=./apps/notification/prisma/schema.prisma",
     "prisma:user": "prisma generate --schema=./apps/user/schema/prisma/schema.prisma",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
