--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "concurrently \"node dist/apps/ecommerce-backend/main\" \"node dist/apps/auth/main\" \"node dist/apps/user/main\"",
     "start:all": "concurrently \"nest start ecommerce-backend --watch\" \"nest start auth --watch\" \"nest start user --watch\"",
-    "start:auth": "prisma generate --schema=./apps/auth/prisma/.prisma",
+    "prisma:auth": "prisma generate --schema=./apps/auth/prisma/schema.prisma",
     "prisma:noti": "prisma generate --schema=./apps/notification/prisma/schema.prisma",
-    "prisma:user": "prisma generate --schema=./apps/user/schema/prisma/schema.prisma",
+    "prisma:user": "prisma generate --schema=./apps/user/prisma/schema.prisma",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -35,12 +36,14 @@
     "@nestjs/platform-socket.io": "^11.1.6",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/websockets": "^11.1.6",
-    "@prisma/client": "^6.14.0",
+    "@prisma/client": "^6.16.1",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "bullmq": "^5.61.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "firebase-admin": "^13.5.0",
+    "ioredis": "^5.8.1",
     "mongoose": "^8.18.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
@@ -63,7 +66,7 @@
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.16.1",
+    "prisma": "^6.17.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
