--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,59 +1,41 @@
 version: '3.8'
 
 services:
-  auth:
+  # NestJS Application
+  app:
     build:
-      context: 
+      context: .
       dockerfile: Dockerfile
-    image: ${DOCKER_USER}/auth:${TAG:-latest}
-    #image: auth
+    container_name: ecom-app
+    restart: unless-stopped
     env_file:
-      - ./.env
-   # container_name: supacart-gym-api
-    ports:
-      - "5003:5003"
-      - "5004:5004"
-    restart: always
-    networks:
-      - app-network
-  user:
-    image: ${DOCKER_USER}/user:${TAG:-latest}
-    #image: user
-    env_file:
-      - ./.env
-   # container_name: supacart-gym-api
+      - .env
     ports:
       - "5001:5001"
-      - "5002:5002"
-    restart: always
+      - "5003:5003"
     networks:
-      - app-network
+      - ecom-network
 
+  # Nginx Reverse Proxy
   nginx:
-    image: ${DOCKER_USER}/nginx-proxy:${TAG:-latest}
-    #image: nginx-proxy
+    image: nginx:alpine
+    container_name: ecom-nginx
+    restart: unless-stopped
     ports:
       - "80:80"
-      - "443:443"
-    env_file:
-      - ./.env
-    depends_on:
-      - auth
-      - user
-    # restart: always
     volumes:
-      - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
+      - ./nginx/nginx.conf.template:/etc/nginx/templates/nginx.conf.template:ro
+    environment:
+      - NGINX_ENVSUBST_OUTPUT_DIR=/etc/nginx
+      - AUTH_SERVICE_HOST=app
+      - AUTH_SERVICE_PORT=5003
+      - USER_SERVICE_HOST=app
+      - USER_SERVICE_PORT=5001
+    depends_on:
+      - app
     networks:
-      - app-network
-  # certbot:
-  #   image: certbot/certbot
-  #   volumes:
-  #     - ./certbot/conf:/etc/letsencrypt
-  #     - ./certbot/www:/var/www/certbot
-  #   command: certonly --webroot -w /var/www/certbot --email oakarkyaw@gmail.com -d ecommerce-backend.ddns.net --agree-tos --no-eff-email
+      - ecom-network
 
 networks:
-  app-network:
+  ecom-network:
     driver: bridge
