--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -3,78 +3,50 @@ events {
 }
 
 http {
-    upstream auth {
-        server auth:5003;   # Auth service
+    upstream auth_service {
+        server ${AUTH_SERVICE_HOST}:${AUTH_SERVICE_PORT};
     }
 
-    upstream user {
-        server user:5001;   # User service
+    upstream user_service {
+        server ${USER_SERVICE_HOST}:${USER_SERVICE_PORT};
     }
 
-    # HTTP Server
+    # Rate limiting
+    limit_req_zone $binary_remote_addr zone=general:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/s;
+
+    # Logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/rss+xml;
+
     server {
         listen 80;
-        server_name ecommerce-backend.ddns.net;
+        server_name localhost;
 
-        # Let's Encrypt verification
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
 
-        # Check if SSL certificate exists, if yes redirect to HTTPS
-        location / {
-            if (-f /etc/letsencrypt/live/ecommerce-backend.ddns.net/fullchain.pem) {
-                return 301 https://$host$request_uri;
-            }
+        # Client body size limit
+        client_max_body_size 10M;
 
-            # If no SSL certificate, serve content on HTTP
-            location /api/v1/auth/ {
-                proxy_pass http://auth/;
-                proxy_http_version 1.1;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection 'upgrade';
-                proxy_set_header Host $host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                proxy_set_header X-Forwarded-Proto $scheme;
-                proxy_cache_bypass $http_upgrade;
-            }
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
 
-            location /api/v1/users/ {
-                proxy_pass http://user/;
-                proxy_http_version 1.1;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection 'upgrade';
-                proxy_set_header Host $host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                proxy_set_header X-Forwarded-Proto $scheme;
-                proxy_cache_bypass $http_upgrade;
-            }
-
-            # Default welcome message
-            add_header Content-Type application/json;
-            return 200 '{"message": "welcome to ecommerce backend"}';
-        }
-    }
-
-    # HTTPS Server (only if certificates exist)
-    server {
-        listen 443 ssl;
-        server_name ecommerce-backend.ddns.net;
-
-        # SSL certificates
-        ssl_certificate /etc/letsencrypt/live/ecommerce-backend.ddns.net/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/ecommerce-backend.ddns.net/privkey.pem;
-
-        # SSL settings
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
-
-        # Auth API
-        location /api/v1/auth/ {
-            proxy_pass http://auth/;
+        # User Service - MUST come before /api/auth to match first
+        location /api/v1/users {
+            limit_req zone=general burst=20 nodelay;
+            
+            proxy_pass http://user_service;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -85,9 +57,11 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # User API
-        location /api/v1/users/ {
-            proxy_pass http://user/;
+        # Auth Service - with /api/auth prefix
+        location /api/auth {
+            limit_req zone=auth burst=10 nodelay;
+            
+            proxy_pass http://auth_service;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -98,10 +72,10 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Welcome message for root
+        # Root path
         location / {
+            return 200 '{"status":"ok","message":"E-commerce API Gateway"}';
             add_header Content-Type application/json;
-            return 200 '{"message": "welcome to ecommerce backend"}';
         }
     }
 }
