--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -1,81 +1,63 @@
-events {
-    worker_connections 1024;
+server {
+    listen 80;
+    server_name megabackend.ddns.net;
+
+    # Redirect all HTTP to HTTPS
+    return 301 https://$host$request_uri;
 }
 
-http {
-    upstream auth_service {
-        server ${AUTH_SERVICE_HOST}:${AUTH_SERVICE_PORT};
+server {
+    listen 443 ssl http2;
+    server_name megabackend.ddns.net;
+
+    # SSL certificates (from Certbot)
+    ssl_certificate /etc/letsencrypt/live/megabackend.ddns.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/megabackend.ddns.net/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+
+    # Client body size limit
+    client_max_body_size 10M;
+
+    # Timeouts
+    proxy_connect_timeout 60s;
+    proxy_send_timeout 60s;
+    proxy_read_timeout 60s;
+
+    # User Service
+    location /api/v1/users {
+        proxy_pass http://127.0.0.1:5001;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
     }
 
-    upstream user_service {
-        server ${USER_SERVICE_HOST}:${USER_SERVICE_PORT};
+    # Auth Service
+    location /api/auth {
+        proxy_pass http://127.0.0.1:5003;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
     }
 
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=general:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/s;
-
-    # Logging
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    # Gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/rss+xml;
-
-    server {
-        listen 80;
-        server_name localhost;
-
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-
-        # Client body size limit
-        client_max_body_size 10M;
-
-        # Timeouts
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-
-        # User Service - MUST come before /api/auth to match first
-        location /api/v1/users {
-            limit_req zone=general burst=20 nodelay;
-            
-            proxy_pass http://user_service;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        # Auth Service - with /api/auth prefix
-        location /api/auth {
-            limit_req zone=auth burst=10 nodelay;
-            
-            proxy_pass http://auth_service;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        # Root path
-        location / {
-            return 200 '{"status":"ok","message":"E-commerce API Gateway"}';
-            add_header Content-Type application/json;
-        }
+    # Root path - serve simple HTML page
+    location / {
+        root /var/www/ecom;
+        index index.html;
     }
 }
