--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,31 @@
 version: '3.8'
 
 services:
-  # NestJS Application
-  app:
+  user:
     build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: ecom-app
+      context: .                      # Root of monorepo
+      dockerfile: apps/user/Dockerfile  # Path from root
+    container_name: user
     restart: unless-stopped
     env_file:
       - .env
     ports:
       - "5001:5001"
+    networks:
+      - ecom
+  auth:
+    build:
+      context: .                      # Root of monorepo
+      dockerfile: apps/auth/Dockerfile  # Path from root
+    container_name: auth
+    restart: unless-stopped
+    env_file:
+      - .env
+    ports:
       - "5003:5003"
     networks:
-      - ecom-network
-
-  # Nginx Reverse Proxy
-  # nginx:
-  #   image: nginx:alpine
-  #   container_name: ecom-nginx
-  #   restart: unless-stopped
-  #   ports:
-  #     - "80:80"
-  #   volumes:
-  #     - ./nginx/nginx.conf.template:/etc/nginx/templates/nginx.conf.template:ro
-  #   environment:
-  #     - NGINX_ENVSUBST_OUTPUT_DIR=/etc/nginx
-  #     - AUTH_SERVICE_HOST=app
-  #     - AUTH_SERVICE_PORT=5003
-  #     - USER_SERVICE_HOST=app
-  #     - USER_SERVICE_PORT=5001
-  #   depends_on:
-  #     - app
-  #   networks:
-  #     - ecom-network
+      - ecom
 
 networks:
-  ecom-network:
+  ecom:
     driver: bridge
