--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -31,7 +31,7 @@ server {
 
     # User Service
     location /api/v1/users {
-        proxy_pass http://127.0.0.1:5001;
+        proxy_pass http://127.0.0.1:5001/api/v1/users;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -44,7 +44,7 @@ server {
 
     # Auth Service
     location /api/auth {
-        proxy_pass http://127.0.0.1:5003;
+        proxy_pass http://127.0.0.1:5003/api/auth;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
