--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,25 +25,16 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build & push Auth service
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./apps/auth/Dockerfile
-          push: true
-          tags: |
-            ${{ secrets.DOCKER_USERNAME }}/auth:latest
-            ${{ secrets.DOCKER_USERNAME }}/auth:${{ github.sha }}
-
-      - name: Build & push User service
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./apps/user/Dockerfile
-          push: true
-          tags: |
-            ${{ secrets.DOCKER_USERNAME }}/user:latest
-            ${{ secrets.DOCKER_USERNAME }}/user:${{ github.sha }}
+      - name: Build & push services using Docker Compose
+        run: |
+          # Ensure Docker Compose version 1.29.2 (or higher) is available
+          docker --version
+          
+          # Build and push using docker-compose (for both user and auth services)
+          docker-compose -f docker-compose.yml build
+          
+          # Push the images to Docker Hub
+          docker-compose -f docker-compose.yml push
 
   deploy:
     needs: build
