--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,10 +31,10 @@ jobs:
           docker --version
           
           # Build and push using docker-compose (for both user and auth services)
-          docker-compose -f docker-compose.yml build
+          docker compose build
           
           # Push the images to Docker Hub
-          docker-compose -f docker-compose.yml push
+          docker compose  push
 
   deploy:
     needs: build
