--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,7 +31,7 @@ jobs:
           docker --version
           
           # Build and push using docker-compose (for both user and auth services)
-          docker compose build
+          docker compose build --platform linux/amd64
           
           # Push the images to Docker Hub
           docker compose  push
